--- a/Julio24/test-output/old/Default suite/classes.html
+++ b/Julio24/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Testing.Ejemplo_SoftAssert</td>
+<td>InventoryTests.TC_03_ValidateRemoveButton</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Prueba2</td>
+<td>TC_01</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
