--- a/Julio24/test-output/old/Default suite/classes.html
+++ b/Julio24/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>InventoryTests.TC_03_ValidateRemoveButton</td>
+<td>loginTests.TC_01_Login</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
