--- a/Julio24/test-output/old/Default suite/methods-alphabetical.html
+++ b/Julio24/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f7971">  <td>24/08/17 11:20:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_ValidateRemoveButton.TC_01()[pri:0, instance:InventoryTests.TC_03_ValidateRemoveButton@6d1310f6]">TC_01</td> 
+<tr bgcolor="8789ad">  <td>24/08/24 08:50:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Login.TC_01()[pri:0, instance:loginTests.TC_01_Login@1cfd1875]">TC_01</td> 
   <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="8f7971">  <td>24/08/17 11:20:22</td>   <td>318</td> <td>&nbsp;</td><td title="&lt;&lt;TC_03_ValidateRemoveButton.closerDriver()[pri:0, instance:InventoryTests.TC_03_ValidateRemoveButton@6d1310f6]">&lt;&lt;closerDriver</td> 
+<tr bgcolor="8789ad">  <td>24/08/24 08:50:48</td>   <td>253</td> <td>&nbsp;</td><td title="&lt;&lt;TC_01_Login.closerDriver()[pri:0, instance:loginTests.TC_01_Login@1cfd1875]">&lt;&lt;closerDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
-<tr bgcolor="8f7971">  <td>24/08/17 11:20:21</td>   <td>-659</td> <td>&nbsp;</td><td title="&gt;&gt;TC_03_ValidateRemoveButton.startWebDriver()[pri:0, instance:InventoryTests.TC_03_ValidateRemoveButton@6d1310f6]">&gt;&gt;startWebDriver</td> 
+<tr bgcolor="8789ad">  <td>24/08/24 08:50:47</td>   <td>-794</td> <td>&nbsp;</td><td title="&gt;&gt;TC_01_Login.startWebDriver()[pri:0, instance:loginTests.TC_01_Login@1cfd1875]">&gt;&gt;startWebDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1937962514</td>   <td></td> </tr>
 </table>
